src/objects/Lightning_Filter__c.object
<CustomObject>
    <description>This object allows for the creation of lookups and other fields that can be used with Lightning Web Components in cases where the fields on existing objects are not usable (e.g. due to permissions limitations) and the fields need to be controlled with data rather than in the template code. This object is not intended to have records inserted into Salesforce, but can be used on lightning-record-edit-form or other inputs in templates and can even be instantiated in Apex controllers (though it’s not recommended to actually insert it).</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PSA-CLD-USNONE - Account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Lightning Filters</relationshipLabel>
        <relationshipName>Lightning_Filters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>IQVIA_Location</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Lightning Filters</relationshipLabel>
        <relationshipName>Lightning_Filters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PSA-CLD-USNONE - Related ServiceLine</description>
        <label>Service Line</label>
        <referenceTo>Service_Line__c</referenceTo>
        <relationshipLabel>Lightning Filters</relationshipLabel>
        <relationshipName>Lightning_Filters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Target</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Target__c.Program__c</field>
                <operation>equals</operation>
                <valueField>$Source.Program__c</valueField>
            </filterItems>
            <filterItems>
                <field>Target__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Target__c</referenceTo>
        <relationshipLabel>Lightning Filters</relationshipLabel>
        <relationshipName>Lightning_Filters</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Lightning Filter</label>
    <nameField>
        <label>Lightning Filter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lightning Filters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>